fix edge spacing issues (#214)
* fix safari spacing issue

* forgot to add modified files

--- a/scss/module-policy-summary.scss
+++ b/scss/module-policy-summary.scss
@@ -32,7 +32,7 @@
           display: flex;
           padding: 0 140px 0 140px;
           width: 100%;
-          justify-content: space-evenly;
+          justify-content: space-around;
           align-items: center;
 
           .card-count-type {
