--- a/scss/policy-details-overview.scss
+++ b/scss/policy-details-overview.scss
@@ -68,6 +68,8 @@
             height: 100%;
             display: flex;
             flex-direction: row;
+            justify-content: space-around;
+            padding: 0 1.5rem;
             .new-structured-list-table{
               width: 30%;
               flex: 1;
